HW_06 added processing user roles in JdbcUserRepository. Edited populateDB.sql, UserTestData and AbstractUserServiceTest for checking user roles